tests/ui/coverage-attr/name-value.stderr
error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:12:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:17:5
   |
LL |     #![coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #![coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #![coverage = "off"]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:21:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:25:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:28:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:33:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:36:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:40:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:45:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:48:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:52:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:57:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0539`.
